@@ -1,0 +1,187 @@
+<?xml version="1.0"?>
+
+<gutenprint xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.xsd">
+<copyright>
+ *   Copyright 2008 Robert Krawitz (rlk@alum.mit.edu)
+ *
+ *   This program is free software; you can redistribute it and/or modify it
+ *   under the terms of the GNU General Public License as published by the Free
+ *   Software Foundation; either version 2 of the License, or (at your option)
+ *   any later version.
+ *
+ *   This program is distributed in the hope that it will be useful, but
+ *   WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ *   or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ *   for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with this program; if not, write to the Free Software
+ *   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+</copyright>
+<escp2:model id="96">
+ <media src="escp2/media/claria.xml"/>
+ <inputSlots src="escp2/inputslots/cd_roll_feed.xml"/>
+ <qualityPresets src="escp2/qualitypresets/v2880.xml"/>
+ <inkGroup src="escp2/inks/claria.xml"/>
+ <mediaSizes src="escp2/mediasizes/standard.xml"/>
+ <verticalBorderlessSequence>US\003\000\000\000\002</verticalBorderlessSequence>
+ <preinitSequence>\000\000\000\033\001@EJL\0401284.4\012@EJL\040\040\040\040\040\012\033@</preinitSequence>
+ <preinitRemoteSequence>SN\001\000\000</preinitRemoteSequence>
+ <postinitRemoteSequence>JE\001\000\000</postinitRemoteSequence>
+ <commandSet>2000</commandSet>
+ <borderless>Yes</borderless>
+ <supportsVariableDropsizes/>
+ <hasFastGraymode/>
+ <sendZeroAdvance/>
+ <supportsD4Mode/>
+ <preferredEnvelopeOrientation>Portrait</preferredEnvelopeOrientation>
+ <headConfiguration type="default">
+  <Nozzles>180</Nozzles>
+  <MinNozzles>1</MinNozzles>
+  <FirstNozzle>0</FirstNozzle>
+  <NozzleSeparation>2</NozzleSeparation>
+ </headConfiguration>
+ <physicalChannels>6</physicalChannels>
+ <baseSeparation>360</baseSeparation>
+ <resolutionScale>14400</resolutionScale>
+ <minimumResolution>360 180</minimumResolution>
+ <maximumResolution>5760 2880</maximumResolution>
+ <extraVerticalFeed>10</extraVerticalFeed>
+ <separationRows>1</separationRows>
+ <zeroMarginOffset>80</zeroMarginOffset>
+ <microLeftMargin>42</microLeftMargin>
+ <minHorizontalAlignment>1</minHorizontalAlignment>
+ <baseHorizontalAlignment>28800</baseHorizontalAlignment>
+ <bidirectionalAutoUpperLimit>16588800</bidirectionalAutoUpperLimit>
+ <minimumMediaSize>144 144</minimumMediaSize>
+ <maximumMediaSize>612 86400</maximumMediaSize>
+ <maximumImageableArea>612 86400</maximumImageableArea>
+ <margins interleave="soft" media="sheet">9 9 0 9</margins>
+ <margins interleave="printer" media="sheet">9 9 0 9</margins>
+ <margins interleave="soft" media="roll">9 9 0 0</margins>
+ <margins interleave="printer" media="roll">9 9 0 0</margins>
+ <CDOffset>204 189</CDOffset>
+ <CDMediaSize>595 842</CDMediaSize>
+ <extraBottom>24</extraBottom>
+ <AlignmentChoices>4 15 0 0</AlignmentChoices>
+ <ChannelNames>
+  <ChannelName translate="name" name="Yellow"/>
+  <ChannelName translate="name" name="Black"/>
+  <ChannelName translate="name" name="Light Cyan"/>
+  <ChannelName translate="name" name="Light Magenta"/>
+  <ChannelName translate="name" name="Magenta"/>
+  <ChannelName translate="name" name="Cyan"/>
+ </ChannelNames>
+ <resolutions>
+  <resolution translate="text" name="360x90sw" text="360 x 90 DPI Fast Economy">
+   <physicalResolution>360 90</physicalResolution>
+   <parameter type="float" name="escp2_density">4.000000</parameter>
+   <parameter type="integer" name="escp2_ink_type">51</parameter>
+   <parameter type="integer" name="escp2_base_res">360</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.125000</parameter>
+   <parameter type="float" name="DropSize2">0.420000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="360x180sw" text="360 x 180 DPI Draft">
+   <physicalResolution>360 180</physicalResolution>
+   <parameter type="float" name="escp2_density">4.000000</parameter>
+   <parameter type="integer" name="escp2_ink_type">51</parameter>
+   <parameter type="integer" name="escp2_base_res">360</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.125000</parameter>
+   <parameter type="float" name="DropSize2">0.420000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="360sw" text="360 DPI">
+   <physicalResolution>360 360</physicalResolution>
+   <parameter type="float" name="escp2_density">4.000000</parameter>
+   <parameter type="integer" name="escp2_ink_type">51</parameter>
+   <parameter type="integer" name="escp2_base_res">360</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.125000</parameter>
+   <parameter type="float" name="DropSize2">0.420000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="720x360sw" text="720 x 360 DPI">
+   <physicalResolution>720 360</physicalResolution>
+   <parameter type="float" name="escp2_density">3.520000</parameter>
+   <parameter type="integer" name="escp2_ink_type">36</parameter>
+   <parameter type="integer" name="escp2_base_res">720</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.125000</parameter>
+   <parameter type="float" name="DropSize2">0.420000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="720sw" text="720 DPI">
+   <physicalResolution>720 720</physicalResolution>
+   <parameter type="float" name="escp2_density">1.760000</parameter>
+   <parameter type="integer" name="escp2_ink_type">36</parameter>
+   <parameter type="integer" name="escp2_base_res">720</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.125000</parameter>
+   <parameter type="float" name="DropSize2">0.420000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="1440x720sw" text="1440 x 720 DPI">
+   <physicalResolution>1440 720</physicalResolution>
+   <parameter type="float" name="escp2_density">0.880000</parameter>
+   <parameter type="integer" name="escp2_ink_type">36</parameter>
+   <parameter type="integer" name="escp2_base_res">720</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.125000</parameter>
+   <parameter type="float" name="DropSize2">0.420000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="1440x1440ov" text="1440 x 1440 DPI">
+   <physicalResolution>2880 1440</physicalResolution>
+   <printedResolution>1440 1440</printedResolution>
+   <parameter type="float" name="escp2_density">0.440000</parameter>
+   <parameter type="integer" name="escp2_ink_type">36</parameter>
+   <parameter type="integer" name="escp2_base_res">720</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.125000</parameter>
+   <parameter type="float" name="DropSize2">0.420000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="2880x1440sw" text="2880 x 1440 DPI">
+   <physicalResolution>2880 1440</physicalResolution>
+   <parameter type="float" name="escp2_density">0.586000</parameter>
+   <parameter type="integer" name="escp2_ink_type">37</parameter>
+   <parameter type="integer" name="escp2_base_res">720</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.338000</parameter>
+   <parameter type="float" name="DropSize2">0.400000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="5760x1440sw" text="5760 x 1440 DPI">
+   <physicalResolution>5760 1440</physicalResolution>
+   <parameter type="float" name="escp2_density">0.733000</parameter>
+   <parameter type="integer" name="escp2_ink_type">37</parameter>
+   <parameter type="integer" name="escp2_base_res">720</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.833000</parameter>
+   <parameter type="float" name="DropSize2">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="2880x2880sw" text="2880 x 2880 DPI">
+   <physicalResolution>2880 2880</physicalResolution>
+   <parameter type="float" name="escp2_density">0.733000</parameter>
+   <parameter type="integer" name="escp2_ink_type">37</parameter>
+   <parameter type="integer" name="escp2_base_res">720</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.833000</parameter>
+   <parameter type="float" name="DropSize2">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="5760x2880sw" text="5760 x 2880 DPI">
+   <physicalResolution>5760 2880</physicalResolution>
+   <parameter type="float" name="escp2_density">0.440000</parameter>
+   <parameter type="integer" name="escp2_ink_type">37</parameter>
+   <parameter type="integer" name="escp2_base_res">720</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">1.000000</parameter>
+  </resolution>
+ </resolutions>
+</escp2:model>
+</gutenprint>
